ola-parser/src/testdata/syntaxTests/parsing/single_return_param_trailing_comma.sol
contract test {
	fn() returns (uint a,) {}
}
// ----
// ParserError 7591: (43-44): Unexpected trailing comma in parameter list.
